--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Sans-serif;
+  font-family: "Poppins" ,sans-serif;
   background-color: #fffbe3;
 }
 
@@ -27,8 +27,21 @@ a:link {
 
 .card-text {
   font-size: 24px;
-  color: #006FB3;
+  color: black;
 }
+
+.card img {
+  border: 2px solid #FF7AC1;
+  border-radius: 12px 12px 0 0;
+  border-bottom: none;
+}
+
+.card-body {
+  background-color: #FFBDE0;
+  border: 2px solid #FF7AC1;
+  border-radius: 0 0 12px 12px;
+}
+
 .justify-center {
   justify-content: center;
 }
