--- a/style.css
+++ b/style.css
@@ -40,8 +40,11 @@ a:visited {
 }
 
 .card-text {
-  font-size: 24px;
+  text-align: center;
+  font-family: Sans-serif;
+  font-size: 18px;
   color: black;
+  font-weight:600;
 }
 
 .card img {
