--- a/style.css
+++ b/style.css
@@ -42,6 +42,14 @@ a:visited {
 .card-text {
   font-size: 24px;
   color: black;
+  text-align: center;
+}
+
+.box .card {
+  width: 300px;
+  height: 400px;
+  border: none;
+  background: none;
 }
 
 .card img {
