add arai nak naa wa

--- a/style.css
+++ b/style.css
@@ -32,11 +32,18 @@ a:visited {
 .navbar-brand {
   color: #000000;
 }
+
 .box {
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: transparent;
+}
+
+.box .card {
+  height: 100%;
+  border: none;
+  background: none;
 }
 
 .card-text {
