add arai nak naa wa

--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 *{
   margin:0;
   padding:0;
+  font-family: 'Poppins', serif;
 }
 
 .background{
   background-color: #FFFBE3;
+}
+
+h1 {
+  font-family: "Kanit", serif;;
+}
+
+h2 {
+  font-family: "Baloo Bhai 2", serif;
+  font-weight: 600;
 }
 
 .mt-800{
@@ -23,7 +33,6 @@ a:visited {
 }
 
 .text-nav {
-  font-family: Sans-serif;
   color: #000000;
 }
 
@@ -53,7 +62,7 @@ a:visited {
 
 .card-text {
   text-align: center;
-  font-family: Sans-serif;
+  font-family: "Kanit", serif;;
   font-size: 18px;
   color: black;
   font-weight:600;
