--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ h1 {
 h2 {
   font-family: "Baloo Bhai 2", serif;
   font-weight: 600;
+  background-color: #FF7AC1;
+  color: #FFFBE3;
+  border-radius: 12px;
+  width: fit-content;
+  padding: 8px 32px;
 }
 
 .mt-800{
@@ -62,10 +67,10 @@ a:visited {
 
 .card-text {
   text-align: center;
-  font-family: "Kanit", serif;;
+  font-family: "Kanit", serif;
   font-size: 18px;
   color: black;
-  font-weight:600;
+  font-weight: 600;
 }
 
 .card img {
