--- a/style.css
+++ b/style.css
@@ -109,3 +109,21 @@ a:visited {
 .text-item{
   margin-top:2rem;
 }
+.social-icon a{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  color:#000000
+  background-color: white;
+  border: 0.2rem solid #FF7AC1;
+  font-size: 2rem;
+  border-radius: 50%;
+  margin:3rem 1.5rem 3rem;
+  transition:0.3s ease;
+}
+.social-icon a:hover{
+  color:pink;
+  transform:scale(1.3)translateY(-5px);
+}
