--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ a:visited {
   align-items: center;
   width: 4rem;
   height: 4rem;
-  color:#000000
+  color:#000000;
   background-color: white;
   border: 0.2rem solid #FF7AC1;
   font-size: 2rem;
@@ -135,4 +135,8 @@ a:visited {
 .social-icon a:hover{
   color:pink;
   transform:scale(1.3)translateY(-5px);
+}
+
+.justify-items-center{
+  justify-items: center;
 }
