--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ h2 {
   padding: 8px 32px;
 }
 
+p {
+  font-family: 'Poppins', "Kanit", serif;
+}
+
 .mt-800{
   margin-top: 100px;
   margin-bottom: 100px;
