--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ a:visited {
   align-items: center;
   width: 4rem;
   height: 4rem;
-  color:#000000
+  color:#000000;
   background-color: white;
   border: 0.2rem solid #FF7AC1;
   font-size: 2rem;
